# intel-marketplace

./: .env.example  Buyer_Agent_Spec.docx  Dockerfile  LICENSE  README.md  Seller_Agent_Spec.docx  Seller_Agent_Spec_SANITIZED.md  WorldMonitor_Hackathon_Spec.docx  package.json  template.yaml
hackathons/agents/world-monitor-agent/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  template.yaml
hackathons/agents/world-monitor-agent/frontend/: index.html  package.json  vite.config.ts
hackathons/agents/world-monitor-agent/frontend/src/: App.tsx  api.ts
hackathons/agents/world-monitor-agent/frontend/src/components/: ActivityLog.tsx  ChatPanel.tsx  MarketplaceSidebar.tsx  OffersBar.tsx
hackathons/agents/world-monitor-agent/scripts/: auto_trade.py  buy_from_sellers.py
hackathons/agents/world-monitor-agent/src/: agent_a2a.py  log.py  setup.py  strands_agent.py  web.py
hackathons/agents/world-monitor-agent/src/tools/: apify_tools.py  cornelius.py  exa_tools.py  nvm_discovery.py  staffing_agency.py  zeroclick.py
worldmonitor/: .env.vercel  vite.config.ts
worldmonitor/api/: _api-key.js  apify-search.js  intel-chat.js
worldmonitor/api/mcp/: apify.js  trinity.js
worldmonitor/src/components/: ChatbotPanel.ts
